# hostname1-daemon

./: README.md
rtkit-to-hostname1-transformation-hostname1-transformation/: CMakeLists.txt  LICENSE
rtkit-to-hostname1-transformation-hostname1-transformation/cmake/: freebsd.cmake  setup_platform.cmake
rtkit-to-hostname1-transformation-hostname1-transformation/daemon/: CMakeLists.txt  main.cpp
rtkit-to-hostname1-transformation-hostname1-transformation/data/: org.freedesktop.hostname1.conf.in  org.freedesktop.hostname1.policy  org.freedesktop.hostname1.service.in  org.freedesktop.hostname1.xml
rtkit-to-hostname1-transformation-hostname1-transformation/lib/: AuthQueue  AuthQueue.cpp  CMakeLists.txt  DBusSavedContext  DBusSavedContext.cpp  Daemon.cpp  Daemon.h  OSDep.h  Process.cpp  Process.h
rtkit-to-hostname1-transformation-hostname1-transformation/lib/platform/freebsd/: OSDep.cpp
rtkit-to-hostname1-transformation-hostname1-transformation/poettering-rtkit-test/: CMakeLists.txt  rtkit.c
